# ttools

./: pyproject.toml
tests/: test_itertools.py
ttools/: _protecols.py  flatten.py  itertools.py  min_max.py  sort.py
