[project]
name = "ttools"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    "_base_checker.py",
    "tests",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FBT002",
    "FBT003",
    "ANN001",
    "ANN205",
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"